tests/tests/snapshots/test__typescript__export-many-raw.snap
---
source: tests/tests/typescript.rs
assertion_line: 637
expression: output
---
export type Range<T> = {
	start: T,
	end: T,
};

export type RangeInclusive<T> = {
	start: T,
	end: T,
};

export type String = string;

export type PathBuf = string;

export type IpAddr = string;

export type Ipv4Addr = string;

export type Ipv6Addr = string;

export type SocketAddr = string;

export type SocketAddrV4 = string;

export type SocketAddrV6 = string;

export type Cow<T> = T;

export type Cow<T> = T;

export type Vec<T> = T[];

export type Vec<T> = T[];

export type Result<T, E> = T | E;

export type Vec<T> = T[];

export type PhantomData<T> = null;

export type PhantomData<T> = null;

export type Infallible = never;

export type Unit1 = null;

export type Unit2 = Record<string, never>;

export type Unit3 = [];

export type Unit4 = null;

export type Unit5 = "A";

export type Unit6 = [];

export type Unit7 = Record<string, never>;

export type SimpleStruct = {
	a: number,
	b: string,
	c: [number, string, number],
	d: string[],
	e: string | null,
};

export type TupleStruct1 = number;

export type TupleStruct3 = [number, boolean, string];

export type TestEnum = "Unit" | number | [number, number] | { a: number };

export type RefStruct = TestEnum;

export type InlinerStruct = {
	inline_this: {
		ref_struct: SimpleStruct,
		val: number,
	},
	dont_inline_this: RefStruct,
};

export type GenericStruct<T> = {
	arg: T,
};

export type GenericStruct<T> = {
	arg: T,
};

export type FlattenEnumStruct = {
	outer: string,
	inner: FlattenEnum,
};

export type OverridenStruct = {
	overriden_field: string,
};

export type HasGenericAlias = { [key in number]: string };

export type EnumMacroAttributes = string | number | { a: string; b: number };

export type InlineEnumField = {
	a: string,
};

export type InlineOptionalType = {
	optional_field: {
		a: string,
	} | null,
};

export type Rename = "OneWord" | "TwoWords";

export type TransparentType = TransparentTypeInner;

export type TransparentType2 = null;

export type TransparentTypeWithOverride = string;

export type HashMap<K, V> = { [key in K]: V };

export type HashMap<K, V> = { [key in K]: V };

export type Vec<T> = T[];

export type EnumReferenceRecordKey = {
	a: Partial<{ [key in BasicEnum]: number }>,
};

export type FlattenOnNestedEnum = {
	id: string,
	result: NestedEnum,
};

export type MyEmptyInput = Record<string, never>;

export type String = string;

export type ExtraBracketsInTupleVariant = string;

export type ExtraBracketsInUnnamedStruct = string;

export type Vec<T> = T[];

export type InlineTuple = {
	demo: [string, boolean],
};

export type InlineTuple2 = {
	demo: [{
		demo: [string, boolean],
	}, boolean],
};

export type Box<T> = T;

export type Box<T> = T;

export type SkippedFieldWithinVariant = never | string;

export type KebabCase = {
	test_ing: string,
};

export type Issue281 = {
	default_unity_arguments: string[],
};

export type LifetimeGenericStruct<T> = {
	borrowed: T[],
	owned: T[],
};

export type LifetimeGenericEnum<T> = T;

export type RenameWithWeirdCharsField = {
	odata_context: string,
};

export type RenameWithWeirdCharsVariant = string;

export type RenamedFieldKeys = {
	empty: string,
	quote: string,
	backslash: string,
	newline: string,
	line_separator: string,
	paragraph_separator: string,
};

export type RenamedVariantWithSkippedPayload = never;

export type Type = never;

export type ActualType = {
	a: GenericType<string>,
};

export type SpectaTypeOverride = {
	string_ident: string,
	u32_ident: number,
	path: string,
	tuple: [string, number],
};

export type ContainerTypeOverrideStruct = string;

export type ContainerTypeOverrideEnum = string;

export type ContainerTypeOverrideGeneric = string;

export type ContainerTypeOverrideToGeneric<T> = T;

export type ContainerTypeOverrideTuple = [string, number];

export type ContainerTypeOverrideTupleGeneric<T> = [T, string];

export type InvalidToValidType = {
	cause: null,
};

export type TupleStruct = string;

export type TupleStructWithRep = string;

export type GenericTupleStruct<T> = T;

export type BracedStruct = string;

export type Struct = {
	a: string,
};

export type Struct2 = {
	a: string,
};

export type Enum = "A" | "B";

export type Enum2 = "A" | "B" | { enum_field: null };

export type Enum3 = { a: string };

export type StructRenameAllUppercase = {
	a: number,
	b: number,
};

export type RenameSerdeSpecialChar = {
	b: number,
};

export type EnumRenameAllUppercase = "HelloWorld" | "VariantB" | "TestingWords";

export type Recursive = {
	demo: Recursive,
};

export type RecursiveMapValue = {
	demo: { [key in string]: RecursiveMapValue },
};

export type RecursiveTransparent = RecursiveInline;

export type RecursiveInEnum = { demo: RecursiveInEnum };

export type NonOptional = string | null;

export type OptionalOnNamedField = string | null;

export type OptionalOnTransparentNamedField = {
	b: string | null,
};

export type OptionalInEnum = string | null | { a: string | null } | { a?: string | null };

export type UntaggedVariants = string | number | { id: string } | [string, boolean];

export type UntaggedVariantsWithoutValue = string | [number, string] | number;

export type UntaggedVariantsWithDuplicateBranches = null | number;

export type HashMap<K, V> = { [key in K]: V };

export type Regular = { [key in string]: null };

export type HashMap<K, V> = { [key in K]: V };

export type HashMap<K, V> = { [key in K]: V };

export type HashMap<K, V> = { [key in K]: V };

export type HashMap<K, V> = { [key in K]: V };

export type ValidMaybeValidKey = { [key in MaybeValidKey<string>]: null };

export type ValidMaybeValidKeyNested = { [key in MaybeValidKey<MaybeValidKey<string>>]: null };

export type MacroStruct = string;

export type MacroStruct2 = {
	demo: string,
};

export type MacroEnum = string | { demo2: string };

/**
 * @deprecated
 */
export type DeprecatedType = {
	a: number,
};

/**
 * @deprecated Look at you big man using a deprecation message
 */
export type DeprecatedTypeWithMsg = {
	a: number,
};

/**
 * @deprecated Look at you big man using a deprecation message
 */
export type DeprecatedTypeWithMsg2 = {
	a: number,
};

export type DeprecatedFields = {
	a: number,
	/**
	 * @deprecated
	 */
	b: string,
	/**
	 * @deprecated This field is cringe!
	 */
	c: string,
	/**
	 * @deprecated This field is cringe!
	 */
	d: string,
};

export type DeprecatedTupleVariant = [
/**
 * @deprecated
 */
string, 
/**
 * @deprecated Nope
 */
string, 
/**
 * @deprecated Nope
 */
number];

export type DeprecatedEnumVariants = 
/**
 * @deprecated
 */
"A" | 
/**
 * @deprecated Nope
 */
"B" | 
/**
 * @deprecated Nope
 */
"C";

/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
export type CommentedStruct = {
	/**
	 *  Some triple-slash comment
	 *  Some more triple-slash comment
	 */
	a: number,
};

/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
export type CommentedEnum = 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
number | 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
{ 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
a: number };

/**
 *  Some single-line comment
 */
export type SingleLineComment = 
/**
 *  Some single-line comment
 */
number | 
/**
 *  Some single-line comment
 */
{ 
/**
 *  Some single-line comment
 */
a: number };

export type Demo<A, B> = {
	a: A,
	b: B,
};

export type Demo<A, B> = {
	a: A,
	b: B,
};

export type Demo<A, B> = {
	a: A,
	b: B,
};

export type Demo<A, B> = {
	a: A,
	b: B,
};

export type Demo<A, B> = {
	a: A,
	b: B,
};

export type HashMap<K, V> = { [key in K]: V };

export type HashMap<K, V> = { [key in K]: V };

export type HashMap<K, V> = { [key in K]: V };

export type AGenericStruct<T> = {
	field: Demo<T, boolean>,
};

export type A = {
	a: B,
	b: {
		b: number,
	},
	c: B,
	d: {
		flattened: number,
	},
	e: {
		generic_flattened: number,
	},
};

export type DoubleFlattened = {
	a: ToBeFlattened,
	b: ToBeFlattened,
};

export type FlattenedInner = {
	c: Inner,
};

export type BoxFlattened = {
	b: BoxedInner,
};

export type BoxInline = {
	c: {
		a: number,
	},
};

export type First = {
	a: string,
};

export type Second = {
	a: number,
};

export type Third = {
	a: First,
	b: { [key in string]: string },
	c: First,
};

export type Fourth = {
	a: First,
	b: {
		a: string,
	},
};

export type TagOnStructWithInline = {
	a: First,
	b: {
		a: string,
	},
};

export type Sixth = {
	a: First,
	b: First,
};

export type Seventh = {
	a: First,
	b: Second,
};

export type Eight = string | "B";

export type Ninth = string | "B" | {
	a: string,
} | First;

export type Tenth = string | "B" | {
	a: string,
} | First;

export type MyEnumTagged = { inner: First };

export type MyEnumExternal = { inner: First };

export type MyEnumAdjacent = { inner: First };

export type MyEnumUntagged = { inner: First };

export type EmptyStruct = Record<string, never>;

export type EmptyStructWithTag = Record<string, never>;

export type AdjacentlyTagged = "A" | { id: string; method: string } | string;

export type LoadProjectEvent = ({ project_name: string }) & { progress?: never; status?: never } | { project_name: string; status: string; progress: number };

export type ExternallyTagged = "A" | { id: string; method: string } | string;

export type Issue221External = ({ a: string }) & { b?: never } | ({ b: string }) & { a?: never };

export type InternallyTaggedD = { [key in string]: string };

export type InternallyTaggedE = null;

export type InternallyTaggedF = InternallyTaggedFInner;

export type InternallyTaggedH = InternallyTaggedHInner;

export type InternallyTaggedL = "A" | "B";

export type InternallyTaggedM = "A" | "B";

export type StructWithAlias = {
	field: string,
};

export type StructWithMultipleAliases = {
	field: string,
};

export type StructWithAliasAndRename = {
	field: string,
};

export type EnumWithVariantAlias = "Variant" | "Other";

export type EnumWithMultipleVariantAliases = "Variant" | "Other";

export type EnumWithVariantAliasAndRename = "Variant" | "Other";

export type InternallyTaggedWithAlias = ({ field: string }) & { other?: never } | ({ other: number }) & { field?: never };

export type AdjacentlyTaggedWithAlias = ({ field: string }) & { other?: never } | ({ other: number }) & { field?: never };

export type UntaggedWithAlias = ({ field: string }) & { other?: never } | ({ other: number }) & { field?: never };

export type Issue221UntaggedSafe = ({ a: string }) & { b?: never } | ({ b: string }) & { a?: never };

export type Issue221UntaggedMixed = ({ a: string }) & { b?: never; values?: never } | ({ b: string }) & { a?: never; values?: never } | ({ values: { [key in string]: string } }) & { a?: never; b?: never };

export type EmptyEnum = never;

export type EmptyEnumTagged = never;

export type EmptyEnumTaggedWContent = never;

export type EmptyEnumUntagged = never;

export type SkipOnlyField = Record<string, never>;

export type SkipField = {
	b: number,
};

export type SkipVariant = string;

export type SkipUnnamedFieldInVariant = never | [number];

export type SkipNamedFieldInVariant = Record<string, never> | { b: number };

export type TransparentWithSkip = null;

export type TransparentWithSkip2 = string;

export type TransparentWithSkip3 = string;

export type SkipVariant2 = string;

export type SkipVariant3 = { a: string };

export type SkipStructFields = {
	a: number,
};

export type SpectaSkipNonTypeField = {
	a: number,
};

export type FlattenA = {
	a: number,
	b: number,
};

export type FlattenB = {
	a: FlattenA,
	c: number,
};

export type FlattenC = {
	a: FlattenA,
	c: number,
};

export type FlattenD = {
	a: FlattenA,
	c: number,
};

export type FlattenE = {
	b: {
		a: FlattenA,
		c: number,
	},
	d: number,
};

export type FlattenF = {
	b: {
		a: FlattenA,
		c: number,
	},
	d: number,
};

export type FlattenG = {
	b: FlattenB,
	d: number,
};

export type TupleNested = [number[], [number[], number[]], [number[], number[], number[]]];

export type Generic1<T> = {
	value: T,
	values: T[],
};

export type GenericAutoBound<T> = {
	value: T,
	values: T[],
};

export type GenericAutoBound2<T> = {
	value: T,
	values: T[],
};

export type Container1 = {
	foo: Generic1<number>,
	bar: Generic1<number>[],
	baz: { [key in string]: Generic1<string> },
};

export type Generic2<A, B, C> = A | [B, B, B] | C[] | A[][][] | { a: A; b: B; c: C } | number[] | number | number[][];

export type GenericNewType1<T> = T[][];

export type GenericTuple<T> = [T, T[], T[][]];

export type GenericStruct2<T> = {
	a: T,
	b: [T, T],
	c: [T, [T, T]],
	d: [T, T, T],
	e: [([T, T]), ([T, T]), ([T, T])],
	f: T[],
	g: T[][],
	h: ([([T, T]), ([T, T]), ([T, T])])[],
};

export type InlineGenericNewtype<T> = T;

export type InlineGenericNested<T> = [T, T[], [T, T], { [key in string]: T }, T | null, "Unit" | T | { value: T }];

export type InlineFlattenGenericsG<T> = {
	t: T,
};

export type InlineFlattenGenerics = {
	g: InlineFlattenGenericsG<string>,
	gi: {
		t: string,
	},
	t: InlineFlattenGenericsG<string>,
};

export type GenericParameterOrderPreserved = {
	pair: Pair<number, string>,
};

export type TestCollectionRegister = never;

export type TestCollectionRegister = never;
